@@ -158,6 +158,7 @@ fim_SOURCES  = $(BUILT_SOURCES) \
 	string.cpp
 
 Command.o: Command.h
+CommandConsole.o: defaultConfiguration.o
 CommandConsole-init.o: conf.h defaultConfiguration.o
 help.o: conf.h defaultConfiguration.o
 fim.o: version.h help.cpp grammar.h examples.h
