@@ -77,6 +77,7 @@
 #endif
 #if 1
 		setVariable(FIM_VID_CONSOLE_KEY,FIM_SYM_CONSOLE_KEY);
+		setVariable(FIM_VID_PUSH_PUSHES_DIRS,1);
 #endif
 #if 0
 		setVariable(FIM_VID_REDUCE_FACTOR,FIM_CNS_SCALEFACTOR);
