@@ -6,6 +6,7 @@ fim_var_help_db[FIM_VID_CACHE_STATUS]= "[internal,out] string with current infor
 fim_var_help_db[FIM_VID_DISPLAY_CONSOLE]= "[internal,in] if 1, will display the output console" ;
 fim_var_help_db[FIM_VID_DEVICE_DRIVER]= "[internal,out] the current display device string" ;
 fim_var_help_db[FIM_VID_DISPLAY_STATUS]= "[internal,in] if 1, will display the status bar" ;
+fim_var_help_db[FIM_VID_PUSH_PUSHES_DIRS]= "[internal,in] if 1, the push command will also accept and push directories (using pushdir)" ;
 fim_var_help_db[FIM_VID_SANITY_CHECK]= "[internal,in,experimental] if 1, will execute a sanity check on startup" ;
 fim_var_help_db[FIM_VID_LAST_SYSTEM_OUTPUT]= "[internal,out,experimental] the standard output of the last call to the system command" ;
 fim_var_help_db[FIM_VID_LOAD_DEFAULT_ETC_FIMRC]= "[internal,in] if 1 at startup, will load /etc/fimrc, or equivalent system startup file" ;
@@ -13,6 +14,7 @@ fim_var_help_db[FIM_VID_DEFAULT_ETC_FIMRC]= "[internal,in] string with the globa
 fim_var_help_db[FIM_VID_NO_RC_FILE]= "[internal,in] if 1, the ~/.fimrc file will not be loaded at startup" ;
 fim_var_help_db[FIM_VID_NO_EXTERNAL_LOADERS]= "[internal,in] if 1, no external loading programs will be tried for piping in an unsupported type image file" ;
 fim_var_help_db[FIM_VID_SCRIPTOUT_FILE]= "[internal,in] the name of the file to write to when recording sessions" ;
+fim_var_help_db[FIM_VID_PUSHDIR_RE]= "[internal,in] regular expression to match against when pushing files from a directory" ;
 fim_var_help_db[FIM_VID_STATUS_LINE]= "[internal,in] if 1, will display the status bar" ;
 fim_var_help_db[FIM_VID_WANT_PREFETCH]= "[internal,in] if 1, will prefetch further files just after display of the first file" ;
 fim_var_help_db[FIM_VID_WANT_SLEEPS]= "[internal,in] number of seconds of sleep during slideshow mode" ;
