@@ -8,10 +8,11 @@
  * internal commands  reference man page, in man fimrc
  * internal variables reference man page, in man fimrc
  * better internal help mechanisms
- * more control (resolution, windowed mode) for the sdl mode
+ * more control (resolution, windowed mode, resize) in sdl mode
  * new commands (pread,reverse,shuffle,...) 
- * several minor and major bugfixes
  * (temporarily) disabled internal windows splitting 
+ * pushing files from a directory
+ * several minor and major bugfixes
 
         	Version 0.3-beta
 
